...
    func removeDocument(_ document: EmojiArtDocumentViewModel) {
        documentNames[document] = nil
    }

    private var autosave: AnyCancellable?

    init(named name: String = "Emoji Art") {
        self.name = name
        let defaultsKey = "\(EmojiArtDocumentStore.persistenceKeyPrefix).\(name)"
        documentNames = Dictionary(fromPropertyList: UserDefaults.standard.object(forKey: defaultsKey))
        autosave = $documentNames.sink { names in
            UserDefaults.standard.set(names.asPropertyList, forKey: defaultsKey)
        }
...
